情報画面作成

--- a/Count30/Count30/Count30/Views/ViewInfo.xaml
+++ b/Count30/Count30/Count30/Views/ViewInfo.xaml
@@ -5,10 +5,30 @@
              NavigationPage.HasNavigationBar="False"
              Title="{Binding Title}">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="{Binding Title}"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
+        <Grid Margin="20" VerticalOptions="StartAndExpand">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <Label  Grid.Row="0" Grid.Column="0" Text="製品名"/>
+            <Label  Grid.Row="0" Grid.Column="1" Text="Count30"/>
+            <Label  Grid.Row="1" Grid.Column="0" Text="製作者"/>
+            <Label  Grid.Row="1" Grid.Column="1" Text="まいとおす合同会社 小林祥子"/>
+            <Label  Grid.Row="2" Grid.Column="0" Text="Webサイト"/>
+            <Label  Grid.Row="2" Grid.Column="1" Text="{Binding Url}"/>
+            <Button Grid.Row="2" Grid.Column="2" Text="ACCESS" Command="{Binding AccessWebSiteCommand}" BackgroundColor="LightBlue"/>
+            <Label  Grid.Row="3" Grid.Column="0" Text="Twitter"/>
+            <Label  Grid.Row="3" Grid.Column="1" Text="{Binding TwitterId}"/>
+            <Button Grid.Row="3" Grid.Column="2" Text="ACCESS" Command="{Binding AccessTwitterCommand}" BackgroundColor="LightBlue"/>
+            <Label  Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" Text="Copyright © mitose.jp"/>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
