情報画面のテーブルを中央寄せに変更

--- a/Count30/Count30/Count30/Views/ViewInfo.xaml
+++ b/Count30/Count30/Count30/Views/ViewInfo.xaml
@@ -5,7 +5,7 @@
              NavigationPage.HasNavigationBar="False"
              Title="{Binding Title}">
     <ContentPage.Content>
-        <Grid Margin="20" VerticalOptions="StartAndExpand">
+        <Grid Margin="20" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="2*"/>
                 <ColumnDefinition Width="2*"/>
